KYAN-17 Fixed after CR.

--- a/applications/common/frontend/src/atomic-design-system/00-token/t.font/t.font-size.scss
+++ b/applications/common/frontend/src/atomic-design-system/00-token/t.font/t.font-size.scss
@@ -41,64 +41,64 @@ $map_t-font-sizes: (
   '128': 8rem,
 );
 
-// @mixin t-font-size($name) {
-//   font-size: map.get($map_t-font-sizes, #{$name});
-// }
+@mixin t-font-size($name) {
+  font-size: map.get($map_t-font-sizes, #{$name});
+}
 
-// @each $name, $value in $map_t-font-sizes {
-//   // i.e. `.t-font-size--12`
-//   .t-font-size--#{$name} {
-//     @include t-font-size(#{$name});
-//   }
-// }
+@each $name, $value in $map_t-font-sizes {
+  // i.e. `.t-font-size--12`
+  .t-font-size--#{$name} {
+    @include t-font-size(#{$name});
+  }
+}
 
 // source https://levelup.gitconnected.com/css-responsive-fluid-typography-a23a9aab19a
 // $min - Minimum font size (px, rem)
 // $max - Maximum font size (px, rem)
 // $min-vw - Minimum viewport value lock range (px) --(optional)
 // $max-vw - Maximum viewport value lock range (px) --(optional)
-// @mixin t-font-size-fluid(
-//   $min,
-//   $max,
-//   $min-vw: map.get(breakpoint.$map_t-breakpoints-px, medium),
-//   $max-vw: map.get(breakpoint.$map_t-breakpoints-px, maximum)
-// ) {
-//   $min: map.get($map_t-font-sizes, #{$min});
-//   $max: map.get($map_t-font-sizes, #{$max});
+@mixin t-font-size-fluid(
+  $min,
+  $max,
+  $min-vw: map.get(breakpoint.$map_t-breakpoints-px, medium),
+  $max-vw: map.get(breakpoint.$map_t-breakpoints-px, maximum)
+) {
+  $min: map.get($map_t-font-sizes, #{$min});
+  $max: map.get($map_t-font-sizes, #{$max});
 
-//   $min-no-unit: strip-units($min);
-//   $max-no-unit: strip-units($max);
+  $min-no-unit: strip-units($min);
+  $max-no-unit: strip-units($max);
 
-//   $min-vw-no-unit: strip-units($min-vw);
-//   $max-vw-no-unit: strip-units($max-vw);
+  $min-vw-no-unit: strip-units($min-vw);
+  $max-vw-no-unit: strip-units($max-vw);
 
-//   @if getUnit($min) == 'rem' or getUnit($min) == 'em' {
-//     $min-no-unit: strip-units($min) * 16;
-//     $max-no-unit: strip-units($max) * 16;
-//   }
+  @if getUnit($min) == 'rem' or getUnit($min) == 'em' {
+    $min-no-unit: strip-units($min) * 16;
+    $max-no-unit: strip-units($max) * 16;
+  }
 
-//   // output example "font-size: calc(10px + 1.5625vw)"
-//   $responsive: calc(
-//     #{$min-no-unit}px + (#{$max-no-unit} - #{$min-no-unit}) *
-//       ((100vw - #{$min-vw}) / (#{$max-vw-no-unit} - #{$min-vw-no-unit}))
-//   );
+  // output example "font-size: calc(10px + 1.5625vw)"
+  $responsive: calc(
+    #{$min-no-unit}px + (#{$max-no-unit} - #{$min-no-unit}) *
+      ((100vw - #{$min-vw}) / (#{$max-vw-no-unit} - #{$min-vw-no-unit}))
+  );
 
-//   // mobile first
-//   font-size: $min;
+  // mobile first
+  font-size: $min;
 
-//   // medium
-//   @include breakpoint.media-breakpoint-min-width(#{$min-vw}) {
-//     font-size: $responsive;
-//   }
+  // medium
+  @include breakpoint.media-breakpoint-min-width(#{$min-vw}) {
+    font-size: $responsive;
+  }
 
-//   // maximum
-//   @include breakpoint.media-breakpoint-min-width(#{$max-vw}) {
-//     font-size: $max;
-//   }
-// }
-// @function strip-units($number) {
-//   @return math.div($number, ($number * 0 + 1));
-// }
-// @function getUnit($value) {
-//   @return str-slice($value * 0 + '', 2, -1);
-// }
+  // maximum
+  @include breakpoint.media-breakpoint-min-width(#{$max-vw}) {
+    font-size: $max;
+  }
+}
+@function strip-units($number) {
+  @return math.div($number, ($number * 0 + 1));
+}
+@function getUnit($value) {
+  @return str-slice($value * 0 + '', 2, -1);
+}
