--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.table-of-content/m.table-of-content.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.table-of-content/m.table-of-content.scss
@@ -48,7 +48,7 @@
       a {
         @include link.a-animated-underline-link;
         color: #{var(--color-grey--900)} !important;
-        line-height: 150%;
+        line-height: #{var(--line-height-150)};
       }
     }
   }
