--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.eyebrow.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.eyebrow.scss
@@ -28,23 +28,15 @@
 @mixin a-eyebrow {
   font-weight: #{var(--font-weight-600)};
   color: #{var(--color-primary--600)} !important;
-  line-height: 150%;
+  line-height: #{var(--line-height-150)};
 
   &.is-1 {
-    font-size: 1.375rem;
-
-    @media (min-width: 768px) {
-      font-size: calc(22px + (32 - 22) * ((100vw - 768px) / (1408 - 768)));
-    }
-
-    @media (min-width: 1408px) {
-        font-size: 2rem;
-    }
+    @include font.t-font-size-fluid(22, 32);
   }
 
   + .title {
     &.is-1 {
-      line-height: 100%;
+      line-height: #{var(--line-height-100)};
       @extend .pt-4;
     }
 
@@ -71,27 +63,27 @@
   @include breakpoint.media-breakpoint-maximum {
     + .title {
       &.is-1 {
-        padding-top: #{var(--spacing-value-5_2)} !important; // overwriting bulma class (above @extend)
+        padding-top: #{var(--spacing-5_2)} !important; // overwriting bulma class (above @extend)
       }
 
       &.is-2 {
-        padding-top: #{var(--spacing-value-4)} !important; // overwriting bulma class (above @extend)
+        padding-top: #{var(--spacing-4)} !important; // overwriting bulma class (above @extend)
       }
 
       &.is-3 {
-        padding-top: #{var(--spacing-value-4)} !important; // overwriting bulma class (above @extend)
+        padding-top: #{var(--spacing-4)} !important; // overwriting bulma class (above @extend)
       }
 
       &.is-4 {
-        padding-top: #{var(--spacing-value-2)} !important; // overwriting bulma class (above @extend)
+        padding-top: #{var(--spacing-2)} !important; // overwriting bulma class (above @extend)
       }
 
       &.is-5 {
-        padding-top: #{var(--spacing-value-2)} !important; // overwriting bulma class (above @extend)
+        padding-top: #{var(--spacing-2)} !important; // overwriting bulma class (above @extend)
       }
 
       &.is-6 {
-        padding-top: #{var(--spacing-value-2)} !important; // overwriting bulma class (above @extend)
+        padding-top: #{var(--spacing-2)} !important; // overwriting bulma class (above @extend)
       }
     }
   }
