--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-thumbnail/m.article-thumbnail.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-thumbnail/m.article-thumbnail.scss
@@ -47,17 +47,9 @@
 
   .mdi {
     @extend .px-1;
-    line-height: 150%;
-    
-    font-size: 1.375rem;
+    line-height: #{var(--line-height-150)};
+    @include font.t-font-size-fluid(22, 32);
 
-    @media (min-width: 768px) {
-      font-size: calc(22px + (32 - 22) * ((100vw - 768px) / (1408 - 768)));
-    }
-
-    @media (min-width: 1408px) {
-      font-size: 2rem;
-    }
 
     color: #{var(--base-color-black)};
     transform: rotate(45deg);
