--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.level-item/m.level-item.feature.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.level-item/m.level-item.feature.scss
@@ -24,7 +24,7 @@
 
 @mixin m-level-item-feature {
   > .container {
-    margin: #{var(--spacing-value-0)};
+    margin: #{var(--spacing-0)};
 
     > .image {
       &:first-of-type {
@@ -34,7 +34,7 @@
     }
 
     > .content {
-      margin: 0;
+      margin: #{var(--spacing-0)};
 
       &:not(:last-child) {
         @extend .pb-2;
