--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.footer/o.footer.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.footer/o.footer.scss
@@ -42,16 +42,16 @@
 
     @include breakpoint.media-breakpoint-medium {
       display: block;
-      margin: #{var(--spacing-value-0)}; // center - remove
+      margin: #{var(--spacing-0)}; // center - remove
     }
 
     &.is-3by1 {
-      padding-top: #{var(--spacing-value-0)};
+      padding-top: #{var(--spacing-0)};
     }
 
     img {
-      width: #{var(--spacing-value-6_2)};
-      height: #{var(--spacing-value-6_2)};
+      width: #{var(--spacing-6_2)};
+      height: #{var(--spacing-6_2)};
       position: unset;
     }
   }
@@ -70,12 +70,12 @@
     color: #{var(--color-grey--100)} !important;
 
     &:not(:last-of-type) {
-      margin-right: #{var(--spacing-value-5)};
+      margin-right: #{var(--spacing-5)};
       @include breakpoint.media-breakpoint-medium {
-        margin-right: #{var(--spacing-value-1_2)};
+        margin-right: #{var(--spacing-1_2)};
       }
       @include breakpoint.media-breakpoint-large {
-        margin-right: #{var(--spacing-value-5)};
+        margin-right: #{var(--spacing-5)};
       }
     }
   }
@@ -83,7 +83,7 @@
   .column:not(:last-of-type) {
     @extend .mb-6;
     @include breakpoint.media-breakpoint-medium {
-      margin-bottom: #{var(--spacing-value-0)};
+      margin-bottom: #{var(--spacing-0)};
     }
   }
 
