--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.hero-background/o.hero-background.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.hero-background/o.hero-background.scss
@@ -58,7 +58,7 @@ $offset-y: $size * 0.5;
     // container
     & {
       position: relative;
-      margin-top: #{var(--spacing-value-6_2)};
+      margin-top: #{var(--spacing-6_2)};
     }
 
     &::before {
