--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.blog-back-button.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.blog-back-button.scss
@@ -21,7 +21,7 @@
 
 @mixin a-blog-back-button {
   @include link.a-animated-underline-link;
-  color: #{var(--color-grey--900)} !important;
+  color: var(--color-grey--900) !important;
   display: inline-block;
   overflow: hidden;
 }
