--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.button.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.button.scss
@@ -26,13 +26,13 @@
 @use 'src/atomic-design-system/00-token/t.border' as border;
 
 .a-button {
-  border-radius: #{var(--border-radius-1)};
+  border-radius: var(--border-radius-1);
 
   &-primary {
-    background-color: #{var(--color-primary--600)} !important;
+    background-color: var(--color-primary--600) !important;
 
     &:hover {
-      background-color: #{var(--color-primary--500)} !important;
+      background-color: var(--color-primary--500) !important;
 
     }
 
@@ -41,16 +41,16 @@
     }
 
     &:focus-visible {
-      background-color: #{var(--color-primary--500)} !important;
+      background-color: var(--color-primary--500) !important;
 
-      outline: #{var(--border-weight-3)} solid;
-      outline-color: #{var(--color-primary--300)} !important;
+      outline: var(--border-weight-3) solid;
+      outline-color: var(--color-primary--300) !important;
 
       outline-offset: 0;
     }
 
     &:active {
-      background-color: #{var(--color-primary--700)} !important;
+      background-color: var(--color-primary--700) !important;
 
 
       outline: none;
@@ -58,13 +58,13 @@
   }
 
   &-secondary {
-    border: #{var(--border-weight-1)} solid;
-    border-color: #{var(--color-grey--300)} !important;
-    color: #{var(--color-grey--900)} !important;
+    border: var(--border-weight-1) solid;
+    border-color: var(--color-grey--300) !important;
+    color: var(--color-grey--900) !important;
 
     &:hover {
-      border-color: #{var(--color-primary--600)} !important;
-      color: #{var(--color-primary--900)} !important;
+      border-color: var(--color-primary--600) !important;
+      color: var(--color-primary--900) !important;
     }
 
     &:focus:not(:active) {
@@ -72,27 +72,27 @@
     }
 
     &:focus-visible {
-      color: #{var(--color-primary--600)} !important;
-      border-color: #{var(--color-primary--600)} !important;
-      outline: #{var(--border-weight-3)} solid;
-      outline-color: #{var(--color-primary--300)} !important;
+      color: var(--color-primary--600) !important;
+      border-color: var(--color-primary--600) !important;
+      outline: var(--border-weight-3) solid;
+      outline-color: var(--color-primary--300) !important;
 
 
       outline-offset: 0;
     }
 
     &:active {
-      color: #{var(--color-primary--700)} !important;
-      border-color: #{var(--color-primary--700)} !important;
+      color: var(--color-primary--700) !important;
+      border-color: var(--color-primary--700) !important;
     }
   }
 
   &-ghost {
     border: none;
-    color: #{var(--color-grey--900)} !important;
+    color: var(--color-grey--900) !important;
 
     &:hover {
-      color: #{var(--color-primary--600)} !important;
+      color: var(--color-primary--600) !important;
 
       text-decoration: none;
     }
@@ -102,14 +102,14 @@
     }
 
     &:focus-visible {
-      color: #{var(--color-primary--600)} !important;
-      outline: #{var(--border-weight-3)} solid;
-      outline-color: #{var(--color-primary--300)} !important;
+      color: var(--color-primary--600) !important;
+      outline: var(--border-weight-3) solid;
+      outline-color: var(--color-primary--300) !important;
       outline-offset: 0;
     }
 
     &:active {
-      color: #{var(--color-primary--700)} !important;
+      color: var(--color-primary--700) !important;
     }
   }
 }
