--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.content.scss
@@ -23,7 +23,7 @@
 @use 'src/atomic-design-system/00-token/t.color' as color;
 
 .a-content {
-  line-height: #{var(--line-height-150)};
+  line-height: var(--line-height-150);
   letter-spacing: default;
 
   strong {
@@ -31,16 +31,16 @@
   }
 
   &-xs {
-    font-size: #{var(--font-size-12)};
+    font-size: var(--font-size-12);
   }
 
   &-sm {
-    line-height: #{var(--line-height-155)};
-    font-size: #{var(--font-size-14)};
+    line-height: var(--line-height-155);
+    font-size: var(--font-size-14);
   }
 
   &-md {
-    font-size: #{var(--font-size-16)};
+    font-size: var(--font-size-16);
   }
 
   &-lg {
