--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.eyebrow.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.eyebrow.scss
@@ -26,9 +26,9 @@
 @use 'src/atomic-design-system/00-token/t.breakpoint' as breakpoint;
 
 @mixin a-eyebrow {
-  font-weight: #{var(--font-weight-600)};
-  color: #{var(--color-primary--600)} !important;
-  line-height: #{var(--line-height-150)};
+  font-weight: var(--font-weight-600);
+  color: var(--color-primary--600) !important;
+  line-height: var(--line-height-150);
 
   &.is-1 {
     @include font.t-font-size-fluid(22, 32);
@@ -36,7 +36,7 @@
 
   + .title {
     &.is-1 {
-      line-height: #{var(--line-height-100)};
+      line-height: var(--line-height-100);
       @extend .pt-4;
     }
 
@@ -63,27 +63,27 @@
   @include breakpoint.media-breakpoint-maximum {
     + .title {
       &.is-1 {
-        padding-top: #{var(--spacing-5_2)} !important; // overwriting bulma class (above @extend)
+        padding-top: var(--spacing-5_2) !important; // overwriting bulma class (above @extend)
       }
 
       &.is-2 {
-        padding-top: #{var(--spacing-4)} !important; // overwriting bulma class (above @extend)
+        padding-top: var(--spacing-4) !important; // overwriting bulma class (above @extend)
       }
 
       &.is-3 {
-        padding-top: #{var(--spacing-4)} !important; // overwriting bulma class (above @extend)
+        padding-top: var(--spacing-4) !important; // overwriting bulma class (above @extend)
       }
 
       &.is-4 {
-        padding-top: #{var(--spacing-2)} !important; // overwriting bulma class (above @extend)
+        padding-top: var(--spacing-2) !important; // overwriting bulma class (above @extend)
       }
 
       &.is-5 {
-        padding-top: #{var(--spacing-2)} !important; // overwriting bulma class (above @extend)
+        padding-top: var(--spacing-2) !important; // overwriting bulma class (above @extend)
       }
 
       &.is-6 {
-        padding-top: #{var(--spacing-2)} !important; // overwriting bulma class (above @extend)
+        padding-top: var(--spacing-2) !important; // overwriting bulma class (above @extend)
       }
     }
   }
