--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.link.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.link.scss
@@ -25,19 +25,19 @@
 .a-link {
   display: inline-block;
   @include link.a-animated-underline-link;
-  color: #{var(--color-grey--900)} !important;
+  color: var(--color-grey--900) !important;
 
   &:focus-visible {
-    outline: #{var(--border-weight-3)} solid;
-    border-radius: #{var(--border-radius-1)};
-    outline-color: #{var(--color-primary--300)} !important;
+    outline: var(--border-weight-3) solid;
+    border-radius: var(--border-radius-1);
+    outline-color: var(--color-primary--300) !important;
 
     outline-offset: 0;
   }
 
   &:active {
     &::after {
-      background-color: #{var(--color-primary--700)} !important;
+      background-color: var(--color-primary--700) !important;
 
 
       transform: translate3d(0, 0, 0);
@@ -45,29 +45,29 @@
   }
 
   &-light {
-    color: #{var(--color-grey--100)} !important;
+    color: var(--color-grey--100) !important;
 
     &::after {
-      background-color: #{var(--color-primary--500)} !important;
+      background-color: var(--color-primary--500) !important;
 
     }
 
     &:active {
       &::after {
-        background-color: #{var(--color-primary--600)} !important;
+        background-color: var(--color-primary--600) !important;
       }
     }
   }
 
   &-small {
-    font-size: #{var(--font-size-14)};
+    font-size: var(--font-size-14);
   }
 
   &-medium {
-    font-size: #{var(--font-size-16)};
+    font-size: var(--font-size-16);
   }
 
   &-large {
-    font-size: #{var(--font-size-20)};
+    font-size: var(--font-size-20);
   }
 }
