--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-thumbnail/m.article-thumbnail.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-thumbnail/m.article-thumbnail.scss
@@ -26,7 +26,7 @@
 @use 'src/atomic-design-system/00-token/t.border';
 
 @mixin m-article-thumbnail {
-  color: #{var(--color-grey--900)} !important;
+  color: var(--color-grey--900) !important;
   @extend .mb-5_4;
 
   .content {
@@ -41,17 +41,17 @@
 
     .title {
       @extend .mb-4;
-      color: #{var(--color-grey--900)} !important;
+      color: var(--color-grey--900) !important;
     }
   }
 
   .mdi {
     @extend .px-1;
-    line-height: #{var(--line-height-150)};
+    line-height: var(--line-height-150);
     @include font.t-font-size-fluid(22, 32);
 
 
-    color: #{var(--base-color-black)};
+    color: var(--base-color-black);
     transform: rotate(45deg);
   }
 
@@ -63,17 +63,17 @@
 
   .content-info-details {
     .author-content {
-      color: #{var(--color-grey--900)} !important;
+      color: var(--color-grey--900) !important;
       @extend .pr-5;
     }
 
     .date-content {
-      color: #{var(--color-grey--700)} !important;
+      color: var(--color-grey--700) !important;
       @extend .pr-3;
     }
 
     .time-content {
-      color: #{var(--color-grey--700)} !important;
+      color: var(--color-grey--700) !important;
     }
   }
 }
