--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.level-item/m.level-item.stats.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.level-item/m.level-item.stats.scss
@@ -41,11 +41,11 @@
 
     > .title {
       @extend .mb-4;
-      font-weight: #{var(--font-weight-700)};
+      font-weight: var(--font-weight-700);
     }
 
     > .button.is-ghost {
-      color: #{var(--color-grey--1000)} !important;
+      color: var(--color-grey--1000) !important;
       @extend .px-0;
       @include link.a-animated-underline-link;
 
@@ -56,16 +56,16 @@
   @include breakpoint.media-breakpoint-medium {
     .container {
       > .title {
-        margin-bottom: #{var(--spacing-5_2)} !important; // overwriting bulma class (above @extend)
+        margin-bottom: var(--spacing-5_2) !important; // overwriting bulma class (above @extend)
       }
 
       > .content {
         &:first-of-type {
-          margin-bottom: #{var(--spacing-4)} !important; // overwriting bulma class (above @extend)
+          margin-bottom: var(--spacing-4) !important; // overwriting bulma class (above @extend)
         }
 
         &:last-of-type {
-          margin-bottom: #{var(--spacing-4)} !important; // overwriting bulma class (above @extend)
+          margin-bottom: var(--spacing-4) !important; // overwriting bulma class (above @extend)
         }
       }
     }
