--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.message/m.message.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.message/m.message.scss
@@ -22,70 +22,70 @@
 
 @mixin m-message {
   // "None" variant, base for the other variants
-  border-color: #{var(--color-grey--400)} !important;
-  border-left: #{var(--border-weight-3)} solid;
-  border-radius: #{var(--border-radius-2)};
+  border-color: var(--color-grey--400) !important;
+  border-left: var(--border-weight-3) solid;
+  border-radius: var(--border-radius-2);
 
   box-shadow: 0 0.2rem 0.5rem rgb(0 0 0 / 5%), 0 0 0.05rem rgb(0 0 0 / 10%);
 
   .message-header {
-    color: #{var(--color-grey--900)} !important;
-    background-color: #{var( --color-grey--200)} !important;
-    border-top-left-radius: #{var(--border-weight-0)};
+    color: var(--color-grey--900) !important;
+    background-color: var( --color-grey--200) !important;
+    border-top-left-radius: var(--border-weight-0);
   }
 
   .message-body {
-    color: #{var(--color-grey--900)} !important;
+    color: var(--color-grey--900) !important;
 
     border: none;
-    background-color: #{var(--base-color-white)};
+    background-color: var(--base-color-white);
   }
 
   &.is-primary {
-    border-color: #{var(--color-primary--400)} !important;
+    border-color: var(--color-primary--400) !important;
 
     .message-header {
-      background-color: #{var(--color-primary--100)} !important;
+      background-color: var(--color-primary--100) !important;
     }
   }
 
   &.is-link {
-    border-color: #{var(--color-link--400)} !important;
+    border-color: var(--color-link--400) !important;
 
     .message-header {
-      background-color: #{var(--color-link--100)} !important;
+      background-color: var(--color-link--100) !important;
     }
   }
 
   &.is-info {
-    border-color: #{var(--color-info--400)} !important;
+    border-color: var(--color-info--400) !important;
 
     .message-header {
-      background-color: #{var(--color-info--100)} !important;
+      background-color: var(--color-info--100) !important;
     }
   }
 
   &.is-success {
-    border-color: #{var(--color-success--400)} !important;
+    border-color: var(--color-success--400) !important;
 
     .message-header {
-      background-color: #{var(--color-success--100)} !important;
+      background-color: var(--color-success--100) !important;
     }
   }
 
   &.is-warning {
-    border-color: #{var(--color-warning--400)} !important;
+    border-color: var(--color-warning--400) !important;
 
     .message-header {
-      background-color: #{var(--color-warning--100)} !important;
+      background-color: var(--color-warning--100) !important;
     }
   }
 
   &.is-danger {
-    border-color: #{var(--color-danger--400)} !important;
+    border-color: var(--color-danger--400) !important;
 
     .message-header {
-      background-color: #{var(--color-danger--100)} !important;
+      background-color: var(--color-danger--100) !important;
     }
   }
 }
