--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.footer/o.footer.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.footer/o.footer.scss
@@ -24,7 +24,7 @@
 @use 'src/atomic-design-system/01-atom/a.animated-underline-link' as link;
 
 @mixin o-footer {
-  background-color: #{var(--color-grey--1000)} !important;
+  background-color: var(--color-grey--1000) !important;
 
   @extend .py-6_4;
 
@@ -42,40 +42,40 @@
 
     @include breakpoint.media-breakpoint-medium {
       display: block;
-      margin: #{var(--spacing-0)}; // center - remove
+      margin: var(--spacing-0); // center - remove
     }
 
     &.is-3by1 {
-      padding-top: #{var(--spacing-0)};
+      padding-top: var(--spacing-0);
     }
 
     img {
-      width: #{var(--spacing-6_2)};
-      height: #{var(--spacing-6_2)};
+      width: var(--spacing-6_2);
+      height: var(--spacing-6_2);
       position: unset;
     }
   }
 
   .content,
   .content.has-text-grey-darker {
-    color: #{var(--color-grey--100)} !important;
+    color: var(--color-grey--100) !important;
 
     &.is-small {
       @extend .mt-5_1;
-      font-size: #{var(--font-size-12)};
+      font-size: var(--font-size-12);
     }
   }
 
   .icon {
-    color: #{var(--color-grey--100)} !important;
+    color: var(--color-grey--100) !important;
 
     &:not(:last-of-type) {
-      margin-right: #{var(--spacing-5)};
+      margin-right: var(--spacing-5);
       @include breakpoint.media-breakpoint-medium {
-        margin-right: #{var(--spacing-1_2)};
+        margin-right: var(--spacing-1_2);
       }
       @include breakpoint.media-breakpoint-large {
-        margin-right: #{var(--spacing-5)};
+        margin-right: var(--spacing-5);
       }
     }
   }
@@ -83,7 +83,7 @@
   .column:not(:last-of-type) {
     @extend .mb-6;
     @include breakpoint.media-breakpoint-medium {
-      margin-bottom: #{var(--spacing-0)};
+      margin-bottom: var(--spacing-0);
     }
   }
 
@@ -94,8 +94,8 @@
     .menu-label {
       margin: 0;
       text-transform: unset;
-      color: #{var(--color-grey--400)} !important;
-      font-size: #{var(--font-size-16)};
+      color: var(--color-grey--400) !important;
+      font-size: var(--font-size-16);
     }
 
     .menu-list {
@@ -107,7 +107,7 @@
       display: inline-block;
       @include link.a-animated-underline-link;
       @extend .p-0;
-      color: #{var(--color-grey--100)} !important;
+      color: var(--color-grey--100) !important;
 
       &:hover {
         background-color: unset;
