--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
@@ -43,15 +43,15 @@
 
   .navbar-item:not(.navbar-dropdown a.navbar-item):last-of-type {
     @include breakpoint.media-breakpoint-large {
-      padding: #{var(--spacing-1)} 
-        #{var(--spacing-0)} 
-        #{var(--spacing-1)} 
-        #{var(--spacing-0)};
+      padding: var(--spacing-1) 
+        var(--spacing-0) 
+        var(--spacing-1) 
+        var(--spacing-0);
     }
   }
 
   .navbar-brand {
-    padding-left: #{var(--spacing-4)};
+    padding-left: var(--spacing-4);
     align-items: center;
     @include breakpoint.media-breakpoint-large {
       padding-left: 0;
@@ -64,12 +64,12 @@
     .navbar-item {
       @extend .px-0;
 
-      padding-top: #{var(--spacing-0)};
-      padding-bottom: #{var(--spacing-0)};
+      padding-top: var(--spacing-0);
+      padding-bottom: var(--spacing-0);
 
       @include breakpoint.media-breakpoint-large {
-        padding-top: #{var(--spacing-1)};
-        padding-bottom: #{var(--spacing-1)};
+        padding-top: var(--spacing-1);
+        padding-bottom: var(--spacing-1);
       }
 
       &:hover {
@@ -80,29 +80,29 @@
 
   a.navbar-link,
   a.navbar-item {
-    color: #{var(--color-grey--900)} !important;
-    font-weight: #{var(--font-weight-500)};
+    color: var(--color-grey--900) !important;
+    font-weight: var(--font-weight-500);
   }
 
   .navbar-menu {
-    padding-left: #{var(--spacing-4)};
-    padding-right: #{var(--spacing-4)};
-    padding-bottom: #{var(--spacing-4)};
+    padding-left: var(--spacing-4);
+    padding-right: var(--spacing-4);
+    padding-bottom: var(--spacing-4);
 
     @include breakpoint.media-breakpoint-large {
-      padding-bottom: #{var(--spacing-0)};
+      padding-bottom: var(--spacing-0);
     }
 
     .navbar-end,
     .navbar-start {
       display: flex;
       flex-direction: column;
-      gap: #{var(--spacing-0)};
+      gap: var(--spacing-0);
 
       @include breakpoint.media-breakpoint-large {
         flex-direction: row;
         align-items: baseline;
-        gap: #{var(--spacing-6)};
+        gap: var(--spacing-6);
       }
     }
 
@@ -111,7 +111,7 @@
       @include breakpoint.media-breakpoint-large {
         @include link.a-animated-underline-link;
 
-        padding: #{var(--spacing-0)};
+        padding: var(--spacing-0);
 
         &:hover {
           background-color: unset !important; // override Bulma complex selector
@@ -164,20 +164,20 @@
           @extend .mr-1;
         }
         @include breakpoint.media-breakpoint-large {
-          padding-left: #{var(--spacing-0)};
-          padding-right: #{var(--spacing-0)} !important; // overwrite above @extend .pr-3
+          padding-left: var(--spacing-0);
+          padding-right: var(--spacing-0) !important; // overwrite above @extend .pr-3
         }
       }
     }
 
     .button {
-      height: #{var(--spacing-5_2)};
+      height: var(--spacing-5_2);
       @extend .mt-2;
-      font-size: #{var(--font-size-14)};
-      font-weight: #{var(--font-weight-600)};
+      font-size: var(--font-size-14);
+      font-weight: var(--font-weight-600);
 
       @include breakpoint.media-breakpoint-large {
-        margin-top: #{var(--spacing-0)} !important; // overwrite above @extend .mt-2
+        margin-top: var(--spacing-0) !important; // overwrite above @extend .mt-2
       }
     }
   }
