--- a/applications/common/frontend/src/bulma-overwrite/colors.scss
+++ b/applications/common/frontend/src/bulma-overwrite/colors.scss
@@ -33,71 +33,71 @@
   &-primary,
   &-link {
     &-light {
-      color: #{var(--color-primary--500)} !important; /* !important used as in Bulma */
+      color: var(--color-primary--500) !important; /* !important used as in Bulma */
     }
 
     &-dark {
-      color: #{var(--color-primary--700)} !important; /* !important used as in Bulma */
+      color: var(--color-primary--700) !important; /* !important used as in Bulma */
     }
   }
 
   &-grey {
-    color: #{var(--color-grey--600)} !important; /* !important used as in Bulma */
+    color: var(--color-grey--600) !important; /* !important used as in Bulma */
 
     &-light {
-      color: #{var(--color-grey--500)} !important; /* !important used as in Bulma */
+      color: var(--color-grey--500) !important; /* !important used as in Bulma */
     }
 
     &-lighter {
-      color: #{var(--color-grey--400)} !important; /* !important used as in Bulma */
+      color: var(--color-grey--400) !important; /* !important used as in Bulma */
     }
 
     &-dark {
-      color: #{var(--color-grey--700)} !important; /* !important used as in Bulma */
+      color: var(--color-grey--700) !important; /* !important used as in Bulma */
     }
 
     &-darker {
-      color: #{var(--color-grey--800)} !important; /* !important used as in Bulma */
+      color: var(--color-grey--800) !important; /* !important used as in Bulma */
     }
   }
 
   &-info {
     &-light {
-      color: #{var(--color-info--500)} !important; /* !important used as in Bulma */
+      color: var(--color-info--500) !important; /* !important used as in Bulma */
     }
 
     &-dark {
-      color: #{var(--color-info--700)} !important; /* !important used as in Bulma */
+      color: var(--color-info--700) !important; /* !important used as in Bulma */
     }
   }
 
   &-success {
     &-light {
-      color: #{var(--color-success--500)} !important; /* !important used as in Bulma */
+      color: var(--color-success--500) !important; /* !important used as in Bulma */
     }
 
     &-dark {
-      color: #{var(--color-success--700)} !important; /* !important used as in Bulma */
+      color: var(--color-success--700) !important; /* !important used as in Bulma */
     }
   }
 
   &-warning {
     &-light {
-      color: #{var(--color-warning--500)} !important; /* !important used as in Bulma */
+      color: var(--color-warning--500) !important; /* !important used as in Bulma */
     }
 
     &-dark {
-      color: #{var(--color-warning--700)} !important; /* !important used as in Bulma */
+      color: var(--color-warning--700) !important; /* !important used as in Bulma */
     }
   }
 
   &-danger {
     &-light {
-      color: #{var(--color-danger--500)} !important; /* !important used as in Bulma */
+      color: var(--color-danger--500) !important; /* !important used as in Bulma */
     }
 
     &-dark {
-      color: #{var(--color-danger--700)} !important; /* !important used as in Bulma */
+      color: var(--color-danger--700) !important; /* !important used as in Bulma */
     }
   }
 }
@@ -116,71 +116,71 @@
   &-primary,
   &-link {
     &-light {
-      background-color: #{var(--color-primary--500)} !important; /* !important used as in Bulma */
+      background-color: var(--color-primary--500) !important; /* !important used as in Bulma */
     }
 
     &-dark {
-      background-color: #{var(--color-primary--700)} !important; /* !important used as in Bulma */
+      background-color: var(--color-primary--700) !important; /* !important used as in Bulma */
     }
   }
 
   &-grey {
-    background-color: #{var(--color-grey--600)} !important; /* !important used as in Bulma */
+    background-color: var(--color-grey--600) !important; /* !important used as in Bulma */
 
     &-light {
-      background-color: #{var(--color-grey--500)} !important; /* !important used as in Bulma */
+      background-color: var(--color-grey--500) !important; /* !important used as in Bulma */
     }
 
     &-lighter {
-      background-color: #{var(--color-grey--400)} !important; /* !important used as in Bulma */
+      background-color: var(--color-grey--400) !important; /* !important used as in Bulma */
     }
 
     &-dark {
-      background-color: #{var(--color-grey--700)} !important; /* !important used as in Bulma */
+      background-color: var(--color-grey--700) !important; /* !important used as in Bulma */
     }
 
     &-darker {
-      background-color: #{var(--color-grey--800)} !important; /* !important used as in Bulma */
+      background-color: var(--color-grey--800) !important; /* !important used as in Bulma */
     }
   }
 
   &-info {
     &-light {
-      background-color: #{var(--color-info--500)} !important; /* !important used as in Bulma */
+      background-color: var(--color-info--500) !important; /* !important used as in Bulma */
     }
 
     &-dark {
-      background-color: #{var(--color-info--700)} !important; /* !important used as in Bulma */
+      background-color: var(--color-info--700) !important; /* !important used as in Bulma */
     }
   }
 
   &-success {
     &-light {
-      background-color: #{var(--color-success--500)} !important; /* !important used as in Bulma */
+      background-color: var(--color-success--500) !important; /* !important used as in Bulma */
     }
 
     &-dark {
-      background-color: #{var(--color-success--700)} !important; /* !important used as in Bulma */
+      background-color: var(--color-success--700) !important; /* !important used as in Bulma */
     }
   }
 
   &-warning {
     &-light {
-      background-color: #{var(--color-warning--500)} !important; /* !important used as in Bulma */
+      background-color: var(--color-warning--500) !important; /* !important used as in Bulma */
     }
 
     &-dark {
-      background-color: #{var(--color-warning--700)} !important; /* !important used as in Bulma */
+      background-color: var(--color-warning--700) !important; /* !important used as in Bulma */
     }
   }
 
   &-danger {
     &-light {
-      background-color: #{var(--color-danger--500)} !important; /* !important used as in Bulma */
+      background-color: var(--color-danger--500) !important; /* !important used as in Bulma */
     }
 
     &-dark {
-      background-color: #{var(--color-danger--700)} !important; /* !important used as in Bulma */
+      background-color: var(--color-danger--700) !important; /* !important used as in Bulma */
     }
   }
 }
