--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.animated-underline-link.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.animated-underline-link.scss
@@ -38,8 +38,8 @@
   }
 
   .icon {
-    margin-left: var(--spacing-0);
-    margin-right: var(--spacing-0);
+    margin-left: 0;
+    margin-right: 0;
     justify-content: flex-end;
   }
 
