[KYAN-17] Possibility to overwrite text and notifications colors (#284)

--- a/applications/common/frontend/src/bulma-overwrite/colors.scss
+++ b/applications/common/frontend/src/bulma-overwrite/colors.scss
@@ -19,7 +19,10 @@
 @use 'src/atomic-design-system/00-token/t.color' as colors;
 
 .has-text {
-  &-primary,
+  &-primary {
+    color: var(--color-primary--600) !important;
+  }
+
   &-link {
     &-light {
       color: var(--color-primary--500) !important; /* !important used as in Bulma */
@@ -51,6 +54,8 @@
   }
 
   &-info {
+    color: var(--color-info--600) !important;
+
     &-light {
       color: var(--color-info--500) !important; /* !important used as in Bulma */
     }
@@ -61,6 +66,8 @@
   }
 
   &-success {
+    color: var(--color-success--600) !important;
+
     &-light {
       color: var(--color-success--500) !important; /* !important used as in Bulma */
     }
@@ -71,6 +78,8 @@
   }
 
   &-warning {
+    color: var(--color-warning--600) !important;
+
     &-light {
       color: var(--color-warning--500) !important; /* !important used as in Bulma */
     }
@@ -81,6 +90,8 @@
   }
 
   &-danger {
+    color: var(--color-danger--600) !important;
+
     &-light {
       color: var(--color-danger--500) !important; /* !important used as in Bulma */
     }
@@ -92,14 +103,19 @@
 }
 
 .has-background {
-  &-primary,
+  &-primary {
+    background-color: var(--color-primary--600) !important; /* !important used as in Bulma */
+  }
+
   &-link {
+    background-color: var(--color-link--600) !important; /* !important used as in Bulma */
+
     &-light {
-      background-color: var(--color-primary--500) !important; /* !important used as in Bulma */
+      background-color: var(--color-link--500) !important; /* !important used as in Bulma */
     }
 
     &-dark {
-      background-color: var(--color-primary--700) !important; /* !important used as in Bulma */
+      background-color: var(--color-link--700) !important; /* !important used as in Bulma */
     }
   }
 
@@ -124,6 +140,8 @@
   }
 
   &-info {
+    background-color: var(--color-info--600) !important; /* !important used as in Bulma */
+
     &-light {
       background-color: var(--color-info--500) !important; /* !important used as in Bulma */
     }
@@ -134,6 +152,8 @@
   }
 
   &-success {
+    background-color: var(--color-success--600) !important; /* !important used as in Bulma */
+
     &-light {
       background-color: var(--color-success--500) !important; /* !important used as in Bulma */
     }
@@ -144,6 +164,8 @@
   }
 
   &-warning {
+    background-color: var(--color-warning--600) !important; /* !important used as in Bulma */
+
     &-light {
       background-color: var(--color-warning--500) !important; /* !important used as in Bulma */
     }
@@ -154,6 +176,8 @@
   }
 
   &-danger {
+    background-color: var(--color-danger--600) !important; /* !important used as in Bulma */
+
     &-light {
       background-color: var(--color-danger--500) !important; /* !important used as in Bulma */
     }
